fix(index styles): hide overflow, prevent horiz scrollbar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7,6 +7,8 @@
   text-orientation: sideways;
   writing-mode: vertical-rl;
   line-height: 1.1;
+  overflow: hidden;
+  top: 16px;
 }
 
 .document-center {
